--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,6 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+       # Create environment.prod.ts dynamically
+      - name: Create environment.prod.ts
+        run: |
+          echo "export const environment = {" > src/environments/environment.prod.ts
+          echo "  production: true," >> src/environments/environment.prod.ts
+          echo "  firebaseApiKey: '${{ secrets.FIREBASE_API_KEY }}'," >> src/environments/environment.prod.ts
+          echo "};" >> src/environments/environment.prod.ts
+      
       - run: npm ci && npm run build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
