On branch master Your branch is up to date with 'origin/master'.
Changes to be committed:
	modified:   .vscode/settings.json
	modified:   android/app/build.gradle
	new file:   android/app/src/main/ic_launcher-playstore.png
	renamed:    android/app/src/main/java/com/MoneyTracker/MainActivity.java -> android/app/src/main/java/com/Money_Tracker/MainActivity.java
	modified:   android/app/src/main/res/drawable/ic_launcher_background.xml
	modified:   android/app/src/main/res/mipmap-anydpi-v26/ic_launcher.xml
	modified:   android/app/src/main/res/mipmap-anydpi-v26/ic_launcher_round.xml
	deleted:    android/app/src/main/res/mipmap-hdpi/ic_launcher.png
	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher.webp
	deleted:    android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.png
	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_foreground.webp
	deleted:    android/app/src/main/res/mipmap-hdpi/ic_launcher_round.png
	new file:   android/app/src/main/res/mipmap-hdpi/ic_launcher_round.webp
	deleted:    android/app/src/main/res/mipmap-mdpi/ic_launcher.png
	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher.webp
	deleted:    android/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.png
	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher_foreground.webp
	deleted:    android/app/src/main/res/mipmap-mdpi/ic_launcher_round.png
	new file:   android/app/src/main/res/mipmap-mdpi/ic_launcher_round.webp
	deleted:    android/app/src/main/res/mipmap-xhdpi/ic_launcher.png
	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher.webp
	deleted:    android/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.png
	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher_foreground.webp
	deleted:    android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.png
	new file:   android/app/src/main/res/mipmap-xhdpi/ic_launcher_round.webp
	deleted:    android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png
	new file:   android/app/src/main/res/mip

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "com.MoneyTracker"
+    namespace "com.Money_Tracker"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "com.MoneyTracker"
+        applicationId "com.Money_Tracker"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
